--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ android {
 
 dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
 }
